[package]
name = "dellacherie"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
serde_json = "1.0.64"

[dependencies.tbp]
git = "https://github.com/tetris-bot-protocol/tbp-rs"
branch = "main"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.23"
web-sys = { version = "0.3.50", features = ["DedicatedWorkerGlobalScope"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
